# outlet-postgres

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yaml  pr-title-check.yml  release-plz.yaml  release.yaml
examples/: basic_usage.rs  replica_usage.rs  typed_usage.rs
migrations/: 20241201000001_create_http_logging_tables.sql  20241229000001_add_instance_id_composite_key.sql  20241230000001_add_duration_to_first_byte.sql  20260311000001_partition_by_timestamp.sql  20260311000002_add_trace_columns.sql
src/: error.rs  lib.rs  repository.rs
