[package]
name = "outlet-postgres"
version = "0.3.0"
edition = "2021"
description = "PostgreSQL logging handler for outlet HTTP request/response middleware"
license = "MIT"
repository = "https://github.com/doublewordai/outlet-postgres"
keywords = ["axum", "middleware", "logging", "postgres", "http"]
categories = ["web-programming", "database"]
authors = ["fergus.finn@doubleword.ai"]

[dependencies]
outlet = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
base64 = "0.22"
http = "1.3.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-test = "0.2"
axum = "0.8"
tower = "0.5"
tracing-subscriber = "0.3"
sqlparser = "0.58"
http = "1.3.1"

[[example]]
name = "typed_usage"
required-features = []
